--- a/index.html
+++ b/index.html
@@ -78,6 +78,23 @@
             <h2 class="section-title">Experience</h2>
             <div class="experience-grid">
                 <div class="experience-card">
+                    <img src="imgs/sga-logo-03-279x300.png" alt="SGA Logo" class="company-logo">
+                    <div class="experience-content">
+                        <div class="experience-header">
+                            <div>
+                                <h3>Machine Learning Engineer, Joint Financial Data Committee</h3>
+                                <p class="company">Georgia Institute of Technology Student Government Association - Atlanta, GA</p>
+                            </div>
+                            <span class="date">Oct. 2025 – Present</span>
+                        </div>
+                        <ul>
+                            <li>Built an LSTM model to manage $50M+ across 600+ student orgs, improving allocation efficiency, forecasting future spending, and enhancing transparency</li>
+                            <li>Developed a fraud detection system and automated reporting pipelines, enabling real-time oversight and streamlined budget workflows</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="experience-card">
                     <img src="imgs/Rutgers.png" alt="Rutgers Logo" class="company-logo">
                     <div class="experience-content">
                         <div class="experience-header">
