--- a/index.html
+++ b/index.html
@@ -193,6 +193,24 @@
                         <span class="skill-tag">XGBoost</span>
                     </div>
                     <a href="https://github.com/anishneema/HackGTproject" target="_blank" class="project-link">View on GitHub →</a>
+                    <a href="https://devpost.com/software/servesmart-2i3tzo" target="_blank" class="project-link" style="margin-left: 1rem;">View on Devpost →</a>
+                </div>
+
+                <div class="project-card">
+                    <h3>Pebble</h3>
+                    <p>AI-powered study companion that tracks gaze, posture, hand movements, and phone usage to monitor focus in real-time. Features VAPI voice agent for interactive control ("start"/"pause") and ML-based distraction detection to gently remind users to refocus, making studying smarter and more mindful.</p>
+                    <div class="project-skills">
+                        <span class="skill-tag">React</span>
+                        <span class="skill-tag">Flask</span>
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">VAPI</span>
+                        <span class="skill-tag">MediaPipe</span>
+                        <span class="skill-tag">YOLO8</span>
+                        <span class="skill-tag">XGBoost</span>
+                        <span class="skill-tag">Ngrok</span>
+                    </div>
+                    <a href="https://github.com/aditya-chandrasekhar/studybuddy" target="_blank" class="project-link">View on GitHub →</a>
+                    <a href="https://devpost.com/software/pebble-r3n7i9" target="_blank" class="project-link" style="margin-left: 1rem;">View on Devpost →</a>
                 </div>
 
                 <div class="project-card">
