Update CV link to new file name

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h2>CS @ Georgia Tech</h2>
             <div class="cta-buttons">
                 <a href="#contact" class="cta-button primary-btn">Contact Me</a>
-                <a href="Kuber_Sarwal_Resume.pdf" target="_blank" class="cta-button secondary-btn">View CV</a>
+                <a href="Kuber_s_Resume (21).pdf" target="_blank" class="cta-button secondary-btn">View CV</a>
             </div>
         </div>
     </section>
